Added details component and routing for the same when user clicks on city

--- a/Main/FrontEnd/src/app/authenticate/login/login.component.html
+++ b/Main/FrontEnd/src/app/authenticate/login/login.component.html
@@ -3,7 +3,7 @@
 <div class="mount">
     <div class="singup-container">
         <form #frm="ngForm" (ngSubmit)="onSubmit(frm)">
-          <h2 style="text-align: start; margin-bottom:20px ; "><u>Login</u> <i class='bx bx-lock-alt'></i></h2>
+          <h2 style="text-align: start; margin-bottom:20px ; "><u>Login</u> <i class='bx bx-lock-open bx-tada' ></i></h2>
           <div class="userinput">
               <div class="user-details" ngModelGroup="userdetails">
                 <div class="data-countrycode">
