--- a/Main/FrontEnd/src/app/authenticate/singup/singup.component.html
+++ b/Main/FrontEnd/src/app/authenticate/singup/singup.component.html
@@ -5,7 +5,7 @@
           <div class="userinput">
               <div class="user-details" ngModelGroup="userdetails">
                   <div class="data">
-                    <label for="username"><i class='bx bx-user'></i></label>
+                    <label for="username"><i class='bx bx-user bx-flashing bx-flip-horizontal' ></i></label>
                   <input type="text" ngModel name="username" placeholder="Full name" required  >
                   </div>
                   <div class="data">
