--- a/Main/FrontEnd/src/app/footer/footer.component.html
+++ b/Main/FrontEnd/src/app/footer/footer.component.html
@@ -1,6 +1,6 @@
 <div class="footer-container">
     <div class="select-option">
-        <div class="logo"><H2>Zomato</H2></div>
+        <div class="logo"><a routerLink="/home"><H2>Zomato</H2></a></div>
         <div class="selects">
             <select name="country" id="country" class="country">
                 <option value="India">India</option>
