added details header, header which will be applicable for all pages,

--- a/Main/FrontEnd/src/app/details/details.component.html
+++ b/Main/FrontEnd/src/app/details/details.component.html
@@ -1,1 +1,7 @@
-<p>details works!</p>
+<div class="main-details-container">
+    <div class="details-header">
+        <app-details-header></app-details-header>
+    </div>
+    <div class="details-container">
+    </div>
+</div>
