--- a/Main/FrontEnd/src/app/app.component.css
+++ b/Main/FrontEnd/src/app/app.component.css
@@ -1,8 +1,8 @@
 .app-container{
     display: flex;
     flex-direction: column;
-    width: 100% ;
-    height: 100%    ;
+    width: 100%;
+    height: 100%;   ;
     align-items: center;
     justify-content: center;
     align-content: center;
@@ -12,5 +12,6 @@
 .footer{
     margin-top: 30px;
     position:sticky;
+    width: 100%;
     /* bottom: 0%; */
 }
