--- a/Main/FrontEnd/src/app/authenticate/login/login.component.html
+++ b/Main/FrontEnd/src/app/authenticate/login/login.component.html
@@ -10,7 +10,7 @@
                     <input type="number" ngModel name="countryCode" placeholder="+ 91"required>
               </div>  
                 <div class="data-input">
-                         <input  type="text" ngModel name="contactNumber" placeholder="Mobile Number" required >
+                         <input  type="number" ngModel name="contactNumber" placeholder="Mobile Number" required >
                   </div>
                   
                   
