--- a/Main/FrontEnd/src/app/details/details.component.html
+++ b/Main/FrontEnd/src/app/details/details.component.html
@@ -3,6 +3,6 @@
         <app-details-header></app-details-header>
     </div>
     <div class="details-container">
-        <app-main-content></app-main-content>
+        <app-restaurant-list></app-restaurant-list>
     </div>
 </div>
