--- a/Main/FrontEnd/src/app/authenticate/singup/singup.component.css
+++ b/Main/FrontEnd/src/app/authenticate/singup/singup.component.css
@@ -66,7 +66,8 @@ input{
 .btn button {
     font-size: 20px;
     color: white;
-    background-color: black;
+    background-color: gray;
+    /* background-color: white; */
     box-shadow:  0px 0px 20px rgba(2, 198, 219, 0.8);
     padding: 10px;
     cursor: pointer;
@@ -118,4 +119,9 @@ input{
 a{
     color: black;
     text-decoration: none;
+}
+
+.disable{
+    background-color: black; 
+    color: white;
 }
