--- a/Main/FrontEnd/src/app/city-list/list-card/list-card.component.html
+++ b/Main/FrontEnd/src/app/city-list/list-card/list-card.component.html
@@ -1,9 +1,9 @@
 <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
 
-<a routerLink="/{{cityObj.name}}">
+<a routerLink="/{{cityObj.cityName}}">
     <div class="card-container">
         <div class="card">
-            <h3 class="city-name">{{cityObj.name}}  </h3>
+            <h3 class="city-name">{{cityObj.cityName}}  </h3>
             <p> <i class='bx bx-chevron-right'></i></p>
             <!-- <p><i class='bx bx-chevron-right'></i></p> -->
         </div>
