--- a/Main/FrontEnd/src/app/details/details.component.css
+++ b/Main/FrontEnd/src/app/details/details.component.css
@@ -1,7 +1,8 @@
 .main-details-container{
-    width: 100vw;
-    height: 100vh;
+    width: inherit;
+    height: inherit;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     box-sizing: content-box;
@@ -9,12 +10,22 @@
 .header{
     text-align: center;
     height: 18%;
-    position:absolute;
-    top: 0%;
+    align-self: center;
+    justify-self: center;
+    /* position: sticky;
+    top:0; */
+    /* position:absolute;
+    top: 0%; */
+
 }
 .details-container{
+    text-align: center;
+    /* display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     align-self: last baseline;
-    border: 3px solid green;
+    border: 3px solid green; */
     height: 100%;
     width: 100%;
 }
