--- a/Main/FrontEnd/src/app/city-list/list-card/list-card.component.html
+++ b/Main/FrontEnd/src/app/city-list/list-card/list-card.component.html
@@ -1,6 +1,6 @@
 <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
 
-<a routerLink="/{{cityObj.cityName}}">
+<a routerLink="/{{cityObj.cityName}}/{{cityObj.pinCode}}">
     <div class="card-container">
         <div class="card">
             <h3 class="city-name">{{cityObj.cityName}}  </h3>
