--- a/Main/FrontEnd/src/app/details/restaurant-list/restaurant-list.component.css
+++ b/Main/FrontEnd/src/app/details/restaurant-list/restaurant-list.component.css
@@ -1,10 +1,11 @@
 .list-container{
-    padding: 15px;
+    /* padding: 15px; */
     display: flex;
-    column-gap: 20px;
+    column-gap: 45px;
     row-gap: 30px;
     position: relative;
     justify-content: stretch;
+    flex-wrap: wrap;
     align-items: center;
     justify-items: center;
     align-content: center;
