--- a/Main/FrontEnd/src/app/details/restaurant-list/restaurent-card/restaurent-card.component.css
+++ b/Main/FrontEnd/src/app/details/restaurant-list/restaurent-card/restaurent-card.component.css
@@ -7,32 +7,60 @@ font-family: 'Poppins', sans-serif;
     flex-direction: column;
     align-items: center ;
     align-content: center;
-    width: 450px;
-    height: 500px;
+    width: 400px;
+    height: 450px;
     /* border: 2px solid black; */
     row-gap: 10px;
     border-radius: 20px;
     /* margin: 20px; */
 }
+.card-container:hover{
+    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.5);
+}
+p{
+    padding: 0;
+    margin: 0;
+}
+
 .dish-img{
     border-radius: 20px 20px 0px 0px;
     width: inherit;
     height: 100%;
+    overflow: hidden;
     /* max-height: inherit ; */
-    background-image: url("https://b.zmtcdn.com/data/pictures/chains/4/3400934/f6e6aba198dcd8848208a92b322d4a93_o2_featured_v2.jpg?output-format=webp");
+    /* background-image: url(""); */
     background-size: cover;
     background-repeat: no-repeat;
 }
+.dish-img img{
+    border-radius: 20px 20px 0px 0px;
+    width: inherit;
+    height: inherit;
+}
 .text-details{
     width: 100%;
-    margin-top: 20px;
+    /* margin-top: 1px; */
     display: flex;
-    row-gap: 10px;
+    /* row-gap: 10px; */
     flex-direction: column;
     align-items: center;
 
 }
-.text{
+.text2{
+    box-sizing: border-box;
+    padding-left:  20px;
+    width: inherit;
+    /* border: 1px solid red; */
+    display: flex;
+    /* justify-content: space-between; */
+    flex-direction: row;
+    align-items: center;
+}
+.text2 .sec2{
+    position: relative;
+    left: 25%;
+}
+.text1{
     box-sizing: border-box;
     padding: 10px 20px;
     width: 100%;
@@ -42,6 +70,16 @@ font-family: 'Poppins', sans-serif;
     align-items: center;
     justify-content: space-between;
     /* column-gap: 30px; */
+}
+.sp{
+    margin: 0;padding: 0;
+    text-align: center;
+    display: inline;
+    /* margin:0px 5px; */
+    align-content: start;
+    /* justify-self:center; */
+    column-gap: 1px;
+
 }
 .distance{
     padding-right: 25px;
@@ -53,7 +91,7 @@ font-family: 'Poppins', sans-serif;
     background-color: gray;
 }
 .delivery-note{
-    padding: 10px;
+    padding: 0px 10px;
     display: flex;
     align-items: center;
     justify-content: space-evenly;
