Feature: added food based sorting components-static

--- a/Main/FrontEnd/src/app/details/details.component.html
+++ b/Main/FrontEnd/src/app/details/details.component.html
@@ -2,6 +2,9 @@
     <div class="header">
         <app-details-header></app-details-header>
     </div>
+    <div class="filer">
+        <app-filters></app-filters>
+    </div>
     <div class="details-container">
         <app-restaurant-list></app-restaurant-list>
     </div>
