--- a/Main/FrontEnd/src/app/app.component.css
+++ b/Main/FrontEnd/src/app/app.component.css
@@ -1,4 +1,7 @@
 .app-container{
+    
+    padding: 0px;
+    margin: 0px;
     display: flex;
     flex-direction: column;
     width: 100%;
@@ -8,7 +11,9 @@
     align-content: center;
     /* background-color:green; */
 }
-
+.dynamic-content{
+    width: inherit;
+}
 .footer{
     margin-top: 30px;
     position:sticky;
