--- a/Main/FrontEnd/src/app/city-list/city-list.component.css
+++ b/Main/FrontEnd/src/app/city-list/city-list.component.css
@@ -3,7 +3,7 @@
     column-gap: 30px;
     row-gap: 30px;
     position: relative;
-    justify-content: stretch;
+    justify-content: center;
     align-items: center;
     justify-items: center;
     align-content: center;
