--- a/Main/FrontEnd/src/app/details/details.component.css
+++ b/Main/FrontEnd/src/app/details/details.component.css
@@ -5,28 +5,40 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    box-sizing: content-box;
-    
+    box-sizing: border-box;  
 }
 .header{
     text-align: center;
     height: 18%;
     align-self: center;
     justify-self: center;
-    /* position: sticky;
-    top:0; */
-    /* position:absolute;
-    top: 0%; */
-
+   
 }
-.details-container{
+.filer{
+    height:inherit;
+    width: inherit;
+    margin-top: 20px;
     display: flex;
-    flex-direction: column;
+   justify-content: center;
     align-items: center;
     text-align: center;
     box-sizing: border-box;
-    padding: 60px;
     text-align: center;
-    height: 100%;
-    width: 100%;
+ 
+}
+.details-container{
+    /* position: relative; */
+
+    box-sizing: border-box;
+    margin-top: 20px;
+    display: flex;
+   justify-content: center;
+    align-items: center;
+    text-align: center;
+    box-sizing: border-box;
+    text-align: center;
+    height:inherit;
+    width: inherit;
+
+    
 }
