--- a/Main/FrontEnd/src/app/details/restaurant-list/restaurant-list.component.css
+++ b/Main/FrontEnd/src/app/details/restaurant-list/restaurant-list.component.css
@@ -1,14 +1,11 @@
 .list-container{
-    /* padding: 15px; */
+    width: 100%;
+    box-sizing: border-box;
     display: flex;
-    column-gap: 45px;
-    row-gap: 30px;
-    position: relative;
-    justify-content: stretch;
     flex-wrap: wrap;
-    align-items: center;
-    justify-items: center;
-    align-content: center;
+    column-gap: 40px;
+    row-gap: 30px;
+    justify-content: center;
     flex-wrap: wrap;
     cursor: pointer;
    
