--- a/Main/FrontEnd/src/app/details/restaurant-list/restaurent-card/restaurent-card.component.css
+++ b/Main/FrontEnd/src/app/details/restaurant-list/restaurent-card/restaurent-card.component.css
@@ -2,20 +2,18 @@
 
 .card-container{
     font-family: 'Montserrat', sans-serif;
-font-family: 'Poppins', sans-serif;
+    font-family: 'Poppins', sans-serif;
     display: flex;
     flex-direction: column;
     align-items: center ;
     align-content: center;
-    width: 400px;
-    height: 450px;
-    /* border: 2px solid black; */
+    width: 330px;
+    height: 400px;
     row-gap: 10px;
     border-radius: 20px;
-    /* margin: 20px; */
 }
 .card-container:hover{
-    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.5);
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.4);
 }
 p{
     padding: 0;
@@ -27,8 +25,6 @@ p{
     width: inherit;
     height: 100%;
     overflow: hidden;
-    /* max-height: inherit ; */
-    /* background-image: url(""); */
     background-size: cover;
     background-repeat: no-repeat;
 }
@@ -37,11 +33,17 @@ p{
     width: inherit;
     height: inherit;
 }
+.rating{
+    padding:0px 4px;
+    text-align: center;
+    border-radius: 10px;
+    font-size: 14px;
+    background-color: rgb(12, 186, 12);
+    color: white;
+}
 .text-details{
     width: 100%;
-    /* margin-top: 1px; */
     display: flex;
-    /* row-gap: 10px; */
     flex-direction: column;
     align-items: center;
 
@@ -50,34 +52,28 @@ p{
     box-sizing: border-box;
     padding-left:  20px;
     width: inherit;
-    /* border: 1px solid red; */
     display: flex;
-    /* justify-content: space-between; */
     flex-direction: row;
     align-items: center;
 }
 .text2 .sec2{
     position: relative;
-    left: 25%;
+    left: 5%;
 }
 .text1{
     box-sizing: border-box;
-    padding: 10px 20px;
+    padding: 0px 20px;
     width: 100%;
-    /* border: 1px solid red; */
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    /* column-gap: 30px; */
 }
 .sp{
     margin: 0;padding: 0;
     text-align: center;
     display: inline;
-    /* margin:0px 5px; */
     align-content: start;
-    /* justify-self:center; */
     column-gap: 1px;
 
 }
@@ -92,9 +88,11 @@ p{
 }
 .delivery-note{
     padding: 0px 10px;
+    font-size: 11px;
     display: flex;
     align-items: center;
     justify-content: space-evenly;
+    text-align: justify;
 }
 .delivery-note img{
     width: 80%;
