--- a/Main/FrontEnd/src/app/details/restaurant-list/restaurent-card/restaurent-card.component.css
+++ b/Main/FrontEnd/src/app/details/restaurant-list/restaurent-card/restaurent-card.component.css
@@ -58,7 +58,11 @@ p{
 }
 .text2 .sec2{
     position: relative;
-    left: 5%;
+    left: 15%;
+}
+.text2 p{
+    font-size: 12px;
+    font-weight: 100;
 }
 .text1{
     box-sizing: border-box;
@@ -69,6 +73,11 @@ p{
     align-items: center;
     justify-content: space-between;
 }
+.text1 h2{
+    font-size:20px;
+    font-weight: 200;
+}
+
 .sp{
     margin: 0;padding: 0;
     text-align: center;
